From 7292132 (emptysim):
=======================

In prisim/interferometry.py,

(*) Update member function append_settings() of class ROI_parameters
to append with empty lists if input skymodel is set to None. Update
member function docstring accordingly
(*) Update member function save() of class ROI_parameters to save only
non-empty entries into FITS tables

In scripts/run_prisim.py,

(*) If no sources found in the upper hemisphere, pass empty values to
member function append_settings() of class ROI_parameters

From 4e32435 (ephemeris):
========================

In prisim/delay_spectrum.py,

(*) Import UVBeam from UVData module
(*) In member function beam3Dvol() of class DelayPowerSpectrum, update
to handle external beam specified in UVBeam format.

In prisim/bispectrum_phase.py,

(*) In member function beam3Dvol() of class ClosurePhaseDelaySpectrum,
fix bug by calculating Alt-Az in degrees instead of radians.
(*) In member function beam3Dvol() of class ClosurePhaseDelaySpectrum,
fix bug by swapping the processing steps for achromatic and chromatic
beams 
 
From e31a7ef (bsp_pspec_units):
==============================

In scripts/run_prisim.py,

(*) Handle snapshots when source list is empty

In prisim/interferometry.py,

(*) Minor change in observe() member function of class
InterferometerArray

From f18dd17 (bsp_pspec_units):
==============================

In scripts/run_prisim.py,

(*) Correctly handle usage of jd_init and lst_init parameters
(*) Remove some previously commented lines
(*) Comment lines assigning unused variables

From 480b8e1 (bsp_pspec_units):
==============================

In prisim/bispectrum_phase.py,

(*) In member function compute_power_spectrum() of class
ClosurePhaseDelaySpectrum, create a copy of the input parameter
beamparms in order to not be affected by overwrites

From d11efe9 (bsp_pspec_units):
==============================

In prisim/bispectrum_phase.py,

(*) Account for preservation of cross power spectrum units during